# hello-haskell-web

./: .gitignore  votes.db  you-know-nothing.cabal
src/: Main.hs
src/Models/: Vote.hs
src/Views/: Index.hs  Results.hs
