name:                   you-know-nothing
version:                0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:           LICENSE
author:                 Alec Aivazis
maintainer:             alec@aivazis.com
-- copyright:           
-- category:            
build-type:             Simple
-- extra-source-files:  
cabal-version:          >=1.10

executable you-know-nothing
  main-is:              Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       
                        base >=4.8 && <4.9, 
                        blaze-html >=0.7,
                        blaze-markup >= 0.7,
                        bytestring >= 0.10,
                        persistent >= 1.3,
                        persistent-template >= 1.3,
                        persistent-sqlite >= 1.3,
                        persistent-postgresql >= 1.3,
                        Spock >=0.7.9,
                        text >= 1.2,
                        transformers >= 0.4
  hs-source-dirs:       src
  default-language:     Haskell2010
